<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tela2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".tela2">

        <ImageView
            android:id="@+id/imgPC"
            android:layout_width="134dp"
            android:layout_height="134dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/imagem_jogador_pc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgJogador"
            android:layout_width="134dp"
            android:layout_height="134dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/imagem_jogador_2"
            app:layout_constraintBottom_toTopOf="@+id/btn2"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.7080292" />

        <ImageButton
            android:id="@+id/btn2"
            style="@android:style/Widget.ImageButton"
            android:layout_width="80dp"
            android:layout_height="78dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/op_o_papel"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:srcCompat="@drawable/papel" />

        <ImageButton
            android:id="@+id/btn1"
            style="@android:style/Widget.ImageButton"
            android:layout_width="80dp"
            android:layout_height="78dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/op_o_pedra"
            android:scaleType="centerCrop"
            android:tint="?attr/colorControlHighlight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:srcCompat="@drawable/pedra" />

        <ImageButton
            android:id="@+id/btn3"
            style="@android:style/Widget.ImageButton"
            android:layout_width="80dp"
            android:layout_height="78dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/op_o_tesoura"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:srcCompat="@drawable/tesoura" />

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn2"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/imgJogador"
            app:layout_constraintVertical_bias="0.392" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vs"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/imgJogador"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/imgPC" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/pc"
            android:textColor="@android:color/holo_red_light"
            android:textSize="36sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.522"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="170dp"
            android:text="@string/voc"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/btn3"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.583"
            app:layout_constraintStart_toStartOf="@+id/guideline6" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>